test: add 104 infrastructure tests for Session, RateLimit, Heap, Content, Logging, Completion — 566 total
New test_infrastructure.cpp covers:
- SessionManager: create, validate, remove, limits, timeout, eviction
- RateLimiter: token bucket, stats, enable/disable
- HeapMonitor: defaults, sampling, thresholds
- MCPContent: all factories (text/image/audio/resource/blob), JSON serialization
- MCPToolResult: text, error, image, audio, chaining, JSON output
- MCPToolAnnotations: defaults, readonly, idempotent, builder chain, JSON
- Logging: levels, filtering, sink callbacks, notification format
- CompletionManager: prompt/template completion, truncation, prefix matching
- MCPElicitationField: construction, enum, range, JSON schema output
- Server integration: tools CRUD, resources, prompts, roots, templates,
  ping, initialize, batch, error cases, lifecycle hooks, rate limiting

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure
 
 .PHONY: all clean test
 
@@ -18,6 +18,9 @@ test_tools: ../test_tools.cpp ../arduino_mock.h ../test_framework.h ../../src/mc
 test_mcp_http: test_mcp_http.cpp ../arduino_mock.h ../../src/mcpd.h ../../src/mcpd.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ test_mcp_http.cpp
 
+test_infrastructure: ../test_infrastructure.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_infrastructure.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -27,6 +30,7 @@ test: $(TESTS)
 	@./test_jsonrpc
 	@./test_tools
 	@./test_mcp_http
+	@./test_infrastructure
 	@echo "All test suites completed."
 
 clean:
