test: add 38 session management tests, optimize subscriptions, fix CORS — 820 total
- New test_session.cpp: creation, validation, removal, eviction, timeout,
  diagnostics, struct methods, and edge cases (38 tests)
- Replace std::vector with std::set for resource subscriptions (O(log n))
- Add Authorization and X-API-Key to CORS Access-Control-Allow-Headers
- Bump to v0.27.3, sync library.json + library.properties

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ test/native/test_infrastructure
 test/native/test_modules
 test/native/test_auth_platform
 test/native/test_robustness
+test/native/test_session
