--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ test/native/test_modules
 test/native/test_auth_platform
 test/native/test_robustness
 test/native/test_session
+test/native/test_content_transport
