test: add 63 advanced tests, eliminate all compiler warnings, expand test framework — bump to v0.28.0
- 63 new tests: framework macros, resource template edge cases, content builders,
  server API surface, JSON-RPC dispatch, rate limiter, heap monitor, annotations
- Eliminated all 30 compiler warnings from mock/test code
- 8 new assertion macros: ASSERT_TRUE/FALSE, GT/LT/GE/LE, STR_EQ, NEAR
- Total: 946 tests (883 → 946), 0 warnings, 0 errors

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ test/native/test_auth_platform
 test/native/test_robustness
 test/native/test_session
 test/native/test_content_transport
+test/native/test_advanced
