feat: integrate Auth & Metrics into Server, add 71 integration tests — bump to v0.29.0
- Auth: server.auth() accessor, automatic enforcement on HTTP POST/GET/DELETE
- Metrics: server.metrics() accessor, auto per-method recording in dispatch,
  /metrics endpoint auto-registered on begin()
- 71 new tests: auth lifecycle, metrics tracking, batch JSON-RPC,
  JSON-RPC edge cases, cross-module integration
- Total: 1017 tests (946 → 1017)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ test/native/test_robustness
 test/native/test_session
 test/native/test_content_transport
 test/native/test_advanced
+test/native/test_integration
