feat: tool outputSchema, resource/template annotations, structuredContent — bump to v0.31.0
- Add outputSchema support on MCPTool with automatic structuredContent generation
- Add MCPResourceAnnotations (audience, priority) for resources and resource templates
- Builder-style API: setOutputSchema(), setAudience(), setPriority()
- structuredContent auto-generated for tools with outputSchema when handler returns valid JSON
- 27 new tests covering all new features — total: 1064 tests

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ test/native/test_session
 test/native/test_content_transport
 test/native/test_advanced
 test/native/test_integration
+test/native/test_output_annotations
