--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations
 
 .PHONY: all clean test
 
@@ -42,6 +42,9 @@ test_advanced: ../test_advanced.cpp ../arduino_mock.h ../test_framework.h ../../
 test_integration: ../test_integration.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPAuth.h ../../src/MCPMetrics.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_integration.cpp
 
+test_output_annotations: ../test_output_annotations.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPResource.h ../../src/MCPResourceTemplate.h ../../src/MCPTool.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_output_annotations.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -59,6 +62,7 @@ test: $(TESTS)
 	@./test_content_transport
 	@./test_advanced
 	@./test_integration
+	@./test_output_annotations
 	@echo "All test suites completed."
 
 clean:
