feat: upgrade to MCP 2025-11-25 — icons, title, ResourceLink, Resource.size — bump to v0.32.0
New MCP 2025-11-25 spec features:
- Icons on Server, Tool, Resource, ResourceTemplate, Prompt
- title field on Tool, Resource, ResourceTemplate, Prompt
- ResourceLink content type for tool results
- Resource.size field (content size in bytes)
- Annotations.lastModified field (ISO 8601 timestamp)
- Implementation.description and websiteUrl in server info
- Protocol version negotiation (backwards compatible with 2025-03-26)

Add 41 new tests (1105 total), all passing.

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25
 
 .PHONY: all clean test
 
@@ -45,6 +45,9 @@ test_integration: ../test_integration.cpp ../arduino_mock.h ../test_framework.h 
 test_output_annotations: ../test_output_annotations.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPResource.h ../../src/MCPResourceTemplate.h ../../src/MCPTool.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_output_annotations.cpp
 
+test_2025_11_25: ../test_2025_11_25.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPIcon.h ../../src/MCPTool.h ../../src/MCPResource.h ../../src/MCPResourceTemplate.h ../../src/MCPPrompt.h ../../src/MCPContent.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_2025_11_25.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -63,6 +66,7 @@ test: $(TESTS)
 	@./test_advanced
 	@./test_integration
 	@./test_output_annotations
+	@./test_2025_11_25
 	@echo "All test suites completed."
 
 clean:
