--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ test/native/test_content_transport
 test/native/test_advanced
 test/native/test_integration
 test/native/test_output_annotations
+test/native/test_*
