feat: tool result caching (MCPCache.h, per-tool TTL, bounded eviction) — 29 new tests, fix version sync — bump to v0.36.0

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache
 
 .PHONY: all clean test
 
@@ -54,6 +54,9 @@ test_tasks: ../test_tasks.cpp ../arduino_mock.h ../test_framework.h ../../src/mc
 test_validation: ../test_validation.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPValidation.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_validation.cpp
 
+test_cache: ../test_cache.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPCache.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_cache.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -75,6 +78,7 @@ test: $(TESTS)
 	@./test_2025_11_25
 	@./test_tasks
 	@./test_validation
+	@./test_cache
 	@echo "All test suites completed."
 
 clean:
