--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline
 
 .PHONY: all clean test
 
@@ -60,6 +60,9 @@ test_cache: ../test_cache.cpp ../arduino_mock.h ../test_framework.h ../../src/mc
 test_scheduler: ../test_scheduler.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPScheduler.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_scheduler.cpp
 
+test_pipeline: ../test_pipeline.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPPipeline.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_pipeline.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -83,6 +86,7 @@ test: $(TESTS)
 	@./test_validation
 	@./test_cache
 	@./test_scheduler
+	@./test_pipeline
 	@echo "All test suites completed."
 
 clean:
