feat: tool groups (MCPToolGroup.h, named groups, bulk enable/disable, multi-group membership, reverse index, JSON serialization) — 45 new tests — bump to v0.39.0

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline test_toolgroups
 
 .PHONY: all clean test
 
@@ -63,6 +63,9 @@ test_scheduler: ../test_scheduler.cpp ../arduino_mock.h ../test_framework.h ../.
 test_pipeline: ../test_pipeline.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPPipeline.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_pipeline.cpp
 
+test_toolgroups: ../test_toolgroups.cpp ../arduino_mock.h ../test_framework.h ../../src/mcpd.h ../../src/mcpd.cpp ../../src/MCPToolGroup.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_toolgroups.cpp
+
 test: $(TESTS)
 	@echo ""
 	@echo "══════════════════════════════════════════"
@@ -87,6 +90,7 @@ test: $(TESTS)
 	@./test_cache
 	@./test_scheduler
 	@./test_pipeline
+	@./test_toolgroups
 	@echo "All test suites completed."
 
 clean:
