feat: MCPAlerts — threshold-based alerting engine (hysteresis, cooldown, severity, callbacks, acknowledge, range ops, JSON serialization) — 69 new tests — bump to v0.44.0

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline test_toolgroups test_eventstore test_statestore test_accesscontrol test_auditlog
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline test_toolgroups test_eventstore test_statestore test_accesscontrol test_auditlog test_alerts
 
 .PHONY: all clean test
 
@@ -101,6 +101,7 @@ test: $(TESTS)
 	@./test_statestore
 	@./test_accesscontrol
 	@./test_auditlog
+	@./test_alerts
 	@echo "All test suites completed."
 
 clean:
@@ -111,3 +112,6 @@ test_accesscontrol: ../test_accesscontrol.cpp ../arduino_mock.h ../test_framewor
 
 test_auditlog: ../test_auditlog.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPAuditLog.h ../../src/mcpd.h ../../src/mcpd.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_auditlog.cpp
+
+test_alerts: ../test_alerts.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPAlerts.h
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_alerts.cpp
