feat: MCPHealthCheck — structured component-level health monitoring (register checks, run/cache, listeners, JSON serialization, server integration) — 39 new tests, fix version sync — bump to v0.46.0

--- a/test/native/Makefile
+++ b/test/native/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -DMCPD_TEST -pthread
 INCLUDES = -I../../src -I../mock_includes -I..
 
 # Targets
-TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline test_toolgroups test_eventstore test_statestore test_accesscontrol test_auditlog test_alerts test_watchdog
+TESTS = test_jsonrpc test_tools test_mcp_http test_infrastructure test_modules test_auth_platform test_robustness test_session test_content_transport test_advanced test_integration test_output_annotations test_2025_11_25 test_tasks test_validation test_cache test_scheduler test_pipeline test_toolgroups test_eventstore test_statestore test_accesscontrol test_auditlog test_alerts test_watchdog test_healthcheck
 
 .PHONY: all clean test
 
@@ -119,3 +119,6 @@ test_alerts: ../test_alerts.cpp ../arduino_mock.h ../test_framework.h ../../src/
 
 test_watchdog: ../test_watchdog.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPWatchdog.h
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_watchdog.cpp
+
+test_healthcheck: ../test_healthcheck.cpp ../arduino_mock.h ../test_framework.h ../../src/MCPHealthCheck.h ../../src/mcpd.h ../../src/mcpd.cpp
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ ../test_healthcheck.cpp
