--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=mcpd
 version=0.49.0
 author=Nicola Spieser
-maintainer=Nicola Spieser <redbasecap-buiss@users.noreply.github.com>
+maintainer=Nicola Spieser <quantumnic@users.noreply.github.com>
 sentence=MCP Server SDK for Microcontrollers
 paragraph=Expose ESP32/RP2040 hardware as AI-accessible tools via Model Context Protocol. Implements MCP 2025-03-26 with Streamable HTTP transport, SSE, WebSocket, mDNS discovery, authentication, OTA updates, and Prometheus metrics.
 category=Communication
-url=https://github.com/redbasecap-buiss/mcpd
+url=https://github.com/quantumnic/mcpd
 architectures=esp32,rp2040
 depends=ArduinoJson
